2007-04-04  William Jon McCann  <mccann@jhu.edu>

	* common/test-log.c: (test_log), (main):
	Add file.

2007-04-04  William Jon McCann  <mccann@jhu.edu>

	* common/gdm-log.c: (gdm_log_init):
	* daemon/misc.h:
	Fix building on Solaris.

2007-04-04  William Jon McCann  <mccann@jhu.edu>

	* daemon/gdm-socket-protocol.h:  Oops add file
	missing from last commit.

2007-04-02  William Jon McCann  <mccann@jhu.edu>

	* common/Makefile.am:
	* common/gdm-common.c: (v4_v4_equal), (v6_v6_equal),
	(gdm_address_equal), (gdm_address_is_loopback),
	(gdm_address_get_info):
	* common/gdm-common.h:
	* common/gdm-config.c: (gdm_config_peek_value),
	(gdm_config_get_value), (gdm_config_peek_value_for_id),
	(gdm_config_peek_string_for_id), (gdm_config_get_string_for_id),
	(gdm_config_get_int_for_id), (gdm_config_set_int_for_id):
	* common/gdm-config.h:
	* common/gdm-log.c: (log_level_to_priority_and_prefix),
	(gdm_log_default_handler), (gdm_log_set_debug), (gdm_log_init),
	(gdm_log_shutdown):
	* common/gdm-log.h:
	* configure.ac:
	* daemon/Makefile.am:
	* daemon/auth.c: (add_auth_entry), (add_auth_entry_for_addr),
	(get_local_auths), (gdm_auth_user_add), (gdm_auth_set_local_auth),
	(gdm_auth_free_auth_list):
	* daemon/choose.c: (get_first_address_for_node), (gdm_choose_data),
	(gdm_choose_indirect_alloc),
	(gdm_choose_indirect_dispose_empty_id),
	(gdm_choose_indirect_lookup_by_chosen),
	(gdm_choose_indirect_lookup), (gdm_choose_indirect_dispose):
	* daemon/choose.h:
	* daemon/cookie.c:
	* daemon/cookie.h:
	* daemon/display.c: (gdm_display_manage), (count_session_limits),
	(gdm_display_dispose), (gdm_display_lookup):
	* daemon/display.h:
	* daemon/errorgui.c: (setup_dialog), (gdm_errorgui_error_box_full),
	(gdm_errorgui_error_box), (gdm_errorgui_failsafe_question),
	(gdm_errorgui_failsafe_yesno), (gdm_errorgui_failsafe_ask_buttons):
	* daemon/errorgui.h:
	* daemon/filecheck.c: (gdm_file_check), (gdm_auth_file_check):
	* daemon/gdm-daemon-config.c: (gdm_daemon_config_get_display_list),