@@ -1,3 +1,7 @@
+2007-04-05  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/xdmcp.c: Fix compile for Solaris.
+
 2007-04-04  William Jon McCann  <mccann@jhu.edu>
 
 	* common/test-log.c: (test_log), (main):
